--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@nestjs/platform-express": "^8.0.0",
         "@nestjs/swagger": "^5.0.9",
         "@nestjs/typeorm": "^8.0.2",
+        "camelcase": "^6.2.0",
         "class-transformer": "^0.4.0",
         "class-validator": "^0.13.1",
         "mysql2": "^2.3.0",
